--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.13",
+    "primevue": "^4.3.9",
+    "tailwindcss": "^4.1.13",
     "vue": "^3.5.18"
   },
   "devDependencies": {
